PatternMatching/output/RunMatchWithValsError.output
MatchWithValsError.scala:8: error: unreachable code
      case MIN => println("You matched min")
                  ^
MatchWithValsError.scala:9: error: unreachable code
      case _ => println("Unreachable!!")
